[gd_scene load_steps=7 format=2]

[ext_resource path="res://ZombieWalkingModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Zombie.gd" type="Script" id=2]
[ext_resource path="res://ZombieFuryModel.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.478882
height = 1.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6.28666, 1, 6.16781 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.565166, 0.843533, 0.523968 )

[node name="Zombie" type="KinematicBody" groups=["opens_doors"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.54833, 0 )
script = ExtResource( 2 )

[node name="ZombieWalkingModel" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.74846e-07, 0, -4, 0, 4, 0, 4, 0, -1.74846e-07, -0.904628, -1.24024, -1.7884 )

[node name="ZombieFuryModel" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.74846e-07, 0, -4, 0, 4, 0, 4, 0, -1.74846e-07, -0.895515, -1.31646, -1.75448 )
visible = false

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="Timer_Sfx" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.126116, 0 )
shape = SubResource( 1 )

[node name="Timer_SeePlayer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Position3D_Eyes" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73883, -0.349265 )

[node name="Area_See" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area_See"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -7.44812 )
shape = SubResource( 2 )

[node name="Area_Attack" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area_Attack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.831359 )
shape = SubResource( 3 )

[node name="Timer_EndFury" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer_Sfx" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_SeePlayer" to="." method="_on_Timer_SeePlayer_timeout"]
[connection signal="body_entered" from="Area_See" to="." method="_on_Area_See_body_entered"]
[connection signal="body_exited" from="Area_See" to="." method="_on_Area_See_body_exited"]
[connection signal="body_entered" from="Area_Attack" to="." method="_on_Area_Attack_body_entered"]
[connection signal="body_exited" from="Area_Attack" to="." method="_on_Area_Attack_body_exited"]
[connection signal="timeout" from="Timer_EndFury" to="." method="_on_Timer_EndFury_timeout"]
